<resources>
    <string name="app_name">BallTracker</string>
    <string name="ball_tracker">Ball Tracker</string>
    <string name="teams">Teams</string>
    <string name="new_game">New Game</string>
    <string name="review_games">Reivew Games</string>
    <string name="track">Track</string>
    <string name="back">Back</string>
    <string name="your_team">Team 1</string>
    <string name="opposing_team">Team 2</string>
    <string name="date">Date</string>
    <string name="main_menu">Main Menu</string>
    <string name="edit_game">Edit Game</string>
    <string name="team_score">99 - 99</string>
    <string name="qt1">QT1</string>
    <string name="qt2">QT2</string>
    <string name="qt3">QT3</string>
    <string name="qt4">QT4</string>
    <string name="total_score">Total</string>
    <string name="track_game">Track Game</string>
    <string name="finish">Finish</string>
    <string name="notes">Notes</string>
    <string name="id">id</string>
    <string name="games">Games</string>
    <string name="edit">Edit</string>
    <string name="team">Team</string>
    <string name="pt">99</string>
    <string name="three_pointer">3 Pointers</string>
    <string name="two_pointer">2 Pointers</string>
    <string name="free_throw">Free Throws</string>
    <string name="fouls">Fouls</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="share">Share</string>
    <string name="allow_permissions_title">Allow Permissions?</string>
    <string name="allow_permissions_details">BallTracker would like to access your storage to share your games. Would you like to enable read and write permissions?</string>
    <string name="allow">Allow</string>
    <string name="cancel">Canncel</string>
</resources>
