<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bg_bt1">
        <TextView
            android:id="@+id/teams_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teams"
            android:textColor="#000000"
            android:fontFamily="monospace"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#000000"
            android:fontFamily="monospace"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="#000000"
            android:fontFamily="monospace"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>